--- a/demo/rating_audio.html
+++ b/demo/rating_audio.html
@@ -151,8 +151,8 @@ input[type=submit] {
 <p>When you play each item you will hear three sounds separated by silences. Simply judge WHICH SOUND WAS SOFTEST (quietest) -- 1, 2, or 3?</p>
 <h3>Item 1</h3>
 <audio controls>
-  <source src="https://bonniemclean.github.io/headcheck/middle.wav" type="audio/wav">
-  <source src="https://bonniemclean.github.io/headcheck/middle.mp3" type="audio/mpeg">
+  <source src="https://honestcookingblog.com/headcheck/assets_antiphase_HC_ISO.wav" type="audio/wav">
+  <source src="https://honestcookingblog.com/headcheck/assets_antiphase_HC_ISO.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
 <p><input type="radio" name="item1" value=0> 1</p>
@@ -160,8 +160,8 @@ Your browser does not support the audio element.
 <p><input type="radio" name="item1" value=0> 3</p>
 <h3>Item 2</h3>
 <audio controls>
-  <source src="https://bonniemclean.github.io/headcheck/first.wav" type="audio/wav">
-  <source src="https://bonniemclean.github.io/headcheck/first.mp3" type="audio/mpeg">
+  <source src="https://honestcookingblog.com/headcheck/assets_antiphase_HC_SIO.wav" type="audio/wav">
+  <source src="https://honestcookingblog.com/headcheck/assets_antiphase_HC_SIO.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
 <p><input type="radio" name="item2" value=1> 1</p>
@@ -169,14 +169,13 @@ Your browser does not support the audio element.
 <p><input type="radio" name="item2" value=0> 3</p>
 <h3>Item 3</h3>
 <audio controls>
-  <source src="https://bonniemclean.github.io/headcheck/last.wav" type="audio/wav">
-  <source src="https://bonniemclean.github.io/headcheck/last.mp3" type="audio/mpeg">
+  <source src="https://honestcookingblog.com/headcheck/assets_antiphase_HC_IOS.wav" type="audio/wav">
+  <source src="https://honestcookingblog.com/headcheck/assets_antiphase_HC_IOS.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
 <p><input type="radio" name="item3" id="item3" value=0> 1</p>
 <p><input type="radio" name="item3" id="item3" value=0> 2</p>
 <p><input type="radio" name="item3" id="item3" value=1> 3</p>
-
 <a href="#" id="continue">Continue</a>
 </div>
 
@@ -1600,12 +1599,18 @@ Your browser does not support the audio element.</audio></p>
 
 <div id="exitsurvey">
 <h2 style="text-align:center">Thank you!</h2>
-<p>This is the end of the task. However, before you submit your ratings we need to collect some information from you. Kindly fill in the following:</p>
-<p><strong>Prolific ID*:</strong><input type="text" name="prolificID" required></p>
-<p><strong>Native Language*:</strong><input type="text" name="nativelang" required></p>
-<p><strong>Other languages you understand:</strong><input type="otherlangs" name="entry.2072304820"></p>
-<p><strong>*For our feedback, please also describe the TASK you were performing*:</strong></p>
-<p><input type="text" name="taskdesc" size="80"></p>
+<p>This is the end of the task. However, before you submit your ratings we need to collect some information from you. Kindly fill in the following:</p>
+
+<p><strong>Prolific ID*:</strong><input type="text" name="prolificID" required></p>
+
+<p><strong>Native Language*:</strong><input type="text" name="nativelang" required></p>
+
+<p><strong>Other languages you understand:</strong><input type="otherlangs" name="entry.2072304820"></p>
+
+<p><strong>*For our feedback, please also describe the TASK you were performing*:</strong></p>
+
+<p><input type="text" name="taskdesc" size="80"></p>
+
 <p>*Required</p>
 <div style="text-align:center">
 <p><input type="submit" name="submit"></p>
